--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="left">
             <div class="image">
-                <img src="images/NordAnime/unknown.png" />
+                <img src="images/pic/unknown.png" />
             </div>
         </div>
 
