--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <span>molecule@home:~$ <font color="#b48ead">search</font></span>
                 <span id="AboutDevTypeText"class="typing"></span>
                 <form method="GET" target="_blank" action="http://www.google.com/search?q=">
-                  <span><font color="#8d9ebf">></font></span><input class="search-form" tabindex="1" name="q" class="search-box"autofocus>
+                  <span><font color="#b48ead">></font></span><input class="search-form" tabindex="1" name="q" class="search-box"autofocus>
                 </form>
         </div>
     </div>
